@@ -1,6 +1,7 @@
 package org.pucar.dristi.util;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.extern.slf4j.Slf4j;
 import org.pucar.dristi.config.Configuration;
 import static org.pucar.dristi.config.ServiceConstants.*;
 import org.egov.common.contract.request.RequestInfo;
@@ -15,19 +16,20 @@ import org.springframework.util.CollectionUtils;
 
 import java.util.*;
 import java.util.stream.Collectors;
-
+@Slf4j
 @Service
 public class WorkflowUtil {
 
-	@Autowired
-	private ServiceRequestRepository repository;
+	private final ServiceRequestRepository repository;
+	private final ObjectMapper mapper;
+	private final Configuration configs;
 
 	@Autowired
-	private ObjectMapper mapper;
-
-	@Autowired
-	private Configuration configs;
-
+	public WorkflowUtil(ServiceRequestRepository repository, ObjectMapper mapper, Configuration configs) {
+		this.repository = repository;
+		this.mapper = mapper;
+		this.configs = configs;
+	}
 	/**
 	 * Searches the BussinessService corresponding to the businessServiceCode
 	 * Returns applicable BussinessService for the given parameters
@@ -123,14 +125,13 @@ public class WorkflowUtil {
 
 		if (!CollectionUtils.isEmpty(workflow.getAssignes())) {
 			List<User> users = workflow.getAssignes().stream()
-			    .map(uuid -> {
-			      User user = new User();
-			      user.setUuid(uuid);
-			      return user;
-			    })
-			    .collect(Collectors.toList());
-
-			processInstance.setAssignes(users);
+					.map(uuid -> {
+						User user = new User();
+						user.setUuid(uuid);
+						return user;
+					})
+					.toList();
+		processInstance.setAssignes(users);
 		}
 
 		return processInstance;
@@ -150,8 +151,11 @@ public class WorkflowUtil {
 			List<String> userIds = null;
 
 			if (!CollectionUtils.isEmpty(processInstance.getAssignes())) {
-				userIds = processInstance.getAssignes().stream().map(User::getUuid).collect(Collectors.toList());
+				userIds = processInstance.getAssignes().stream()
+						.map(User::getUuid)
+						.toList();
 			}
+
 
 			Workflow workflow = Workflow.builder().action(processInstance.getAction()).assignes(userIds)
 					.comments(processInstance.getComment()).documents(processInstance.getDocuments()).build();
